cloudstack: Switch build toolchain, travis, docker to JDK8
Signed-off-by: Rohit Yadav <rohit.yadav@shapeblue.com>